--- a/template/XCListOptObject.cpp.erb
+++ b/template/XCListOptObject.cpp.erb
@@ -1,5 +1,5 @@
-#include "XCListOptObject.h"
-#include "XCOptObject.h"
+#include <XCListOptObject.h>
+#include <XCOptObject.h>
 
 #include <stdio.h>
 
