--- a/template/XCListOptObject.h.erb
+++ b/template/XCListOptObject.h.erb
@@ -1,9 +1,9 @@
 
 #pragma once
 
-#include "XCOptFlag.h"
-#include "XCOptInt32.h"
-#include "XCOptString.h"
+#include <XCOptFlag.h>
+#include <XCOptInt32.h>
+#include <XCOptString.h>
 
 #include <getopt.h>
 
