--- a/template/XCListOptObject.cpp.erb
+++ b/template/XCListOptObject.cpp.erb
@@ -38,7 +38,7 @@ void XCListOptObject::show() const
     }
 }
 
-void XCListOptObject::load(
+bool XCListOptObject::load(
     const int in_index,   ///< [in] num of runtime args
     const char* in_optarg ///< [in] runtime args
     )
